# lambdapi-haskell

./: .gitignore  Common.hs  REPL.hs  lph.cabal
Lambda/: AST.hs  Check.hs  Eval.hs  Examples.hs  Parser.hs  Printer.hs  Quote.hs
LambdaPi/: AST.hs  Check.hs  Eval.hs  Main.hs  Parser.hs  Printer.hs  Quote.hs
LambdaPiExt/: AST.hs  Check.hs  Eval.hs  Main.hs  Parser.hs  Printer.hs  Quote.hs
