name: lph
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
maintainer: Ilya Klyuchnikov
description: Dependently typed lambda calculus
data-dir: ""

executable st
    build-depends: base >=4.9.1.0
                 , haskeline >=0.7.4.1
                 , mtl >=2.2.1
                 , parsec >=3.1.11
                 , pretty >=1.1.3.3
    main-is: Lambda/Main.hs
    buildable: True
    hs-source-dirs: .
    other-modules: Common
                   Lambda.AST
                   Lambda.Check
                   Lambda.Eval
                   Lambda.Parser
                   Lambda.Printer
                   Lambda.Quote
                   REPL
    ghc-options: -main-is Lambda.Main

executable lp
    build-depends: base >=4.9.1.0
                 , haskeline >=0.7.4.1
                 , mtl >=2.2.1
                 , parsec >=3.1.11
                 , pretty >=1.1.3.3
    main-is: LambdaPi/Main.hs
    buildable: True
    hs-source-dirs: .
    other-modules: Common
                   LambdaPi.AST
                   LambdaPi.Check
                   LambdaPi.Eval
                   LambdaPi.Parser
                   LambdaPi.Printer
                   LambdaPi.Quote
                   REPL
    ghc-options: -main-is LambdaPi.Main

executable lp-ext
    build-depends: base >=4.9.1.0
                 , haskeline >=0.7.4.1
                 , mtl >=2.2.1
                 , parsec >=3.1.11
                 , pretty >=1.1.3.3
    main-is: LambdaPiExt/Main.hs
    buildable: True
    hs-source-dirs: .
    other-modules: Common
                   LambdaPiExt.AST
                   LambdaPiExt.Check
                   LambdaPiExt.Eval
                   LambdaPiExt.Parser
                   LambdaPiExt.Printer
                   LambdaPiExt.Quote
                   REPL
    ghc-options: -main-is LambdaPiExt.Main
